test_scores/negative_dimers/features/P35249.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P35249.pkl.xz